<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginHomeActivity"
    android:orientation="vertical"
    android:weightSum="5"
    android:background="@drawable/login_home_background">
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:gravity="center"
	    android:orientation="vertical"
	    android:layout_weight="1.5">
	    <ImageView 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:src="@drawable/logo"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="5dp"
	        android:layout_marginTop="15dp"/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_weight="3.5"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:orientation="vertical"
	    android:gravity="center">
	    <EditText 
	        android:id="@+id/txtNumberCardEmail"
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/edittext_height"
	        android:background="@drawable/edittext_background"
	        android:textColor="@color/black"
	        android:hint="@string/number_card_email"
	        android:layout_marginLeft="15dp"
	        android:layout_marginRight="15dp"
	        android:layout_marginBottom="10dp"
	        android:gravity="center"/>
	    <EditText 
	        android:id="@+id/txtDateOfBirth"
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/edittext_height"
	        android:background="@drawable/edittext_background"
	        android:textColor="@color/black"
	        android:hint="@string/date_of_birth"
	        android:layout_marginLeft="15dp"
	        android:layout_marginRight="15dp"
	        android:layout_marginBottom="10dp"
	        android:gravity="center"/>
	    <Button 
	        android:id="@+id/btnLogin"
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/edittext_height"
	        android:text="@string/login"
	        android:textColor="@color/white"
	        android:textStyle="bold"
	        android:background="@drawable/button_background"
	        android:layout_marginLeft="45dp"
	        android:layout_marginRight="45dp"
	        android:layout_marginBottom="10dp"/>
	    <TextView 
	        android:id="@+id/tvBreakLogin"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/break_login"
	        android:textSize="14sp"
	        android:textColor="@color/text_green"
	        android:ellipsize="end"
	        android:layout_marginLeft="15dp"
	        android:layout_marginRight="15dp"
	        android:layout_marginBottom="10dp"/>
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/cant_login"
	        android:textSize="13sp"
	        android:textColor="@color/text_green"
	        android:ellipsize="end"
	        android:layout_marginLeft="15dp"
	        android:layout_marginRight="15dp"
	        android:layout_marginBottom="10dp"/>
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/dont_have_card"
	        android:textSize="13sp"
	        android:textColor="@color/text_green"
	        android:ellipsize="end"
	        android:layout_marginLeft="15dp"
	        android:layout_marginRight="15dp"
	        android:layout_marginBottom="10dp"/>
	    <Button 
	        android:id="@+id/btnCallHotline"
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/edittext_height"
	        android:text="@string/call_hotline"
	        android:textColor="@color/white"
	        android:textStyle="bold"
	        android:background="@drawable/button_background"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="15dp"
	        android:layout_marginRight="15dp"/>
	</LinearLayout>
</LinearLayout>