<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/silver">
        <EditText 
            android:id="@+id/txtSearch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:hint="@string/edittext_hint_search"
            android:background="@drawable/edittext_background"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"/>
        <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/txtCitySearch"
                android:layout_width="@dimen/edittext_width"
                android:layout_height="@dimen/edittext_height"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="@color/white"
                android:editable="false"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/choose_city" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/txtDistrictSearch"
                android:layout_width="@dimen/edittext_width"
                android:layout_height="@dimen/edittext_height"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/txtCitySearch"
                android:background="@color/white"
                android:editable="false"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/choose_district" />

            <Button
                android:id="@+id/btnSubmitSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="-5dp"
                android:layout_toRightOf="@+id/txtDistrictSearch"
                android:text="Tìm" />

        </RelativeLayout>
    </LinearLayout>
    <View 
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray_of_grey"/>
	<ListView 
	    android:id="@+id/lvPlaceSearch"
	    android:layout_marginTop="5dp"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"></ListView>
</LinearLayout>
