<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<ScrollView 
	    android:layout_alignParentTop="true"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:orientation="vertical">
	        <android.support.v4.view.ViewPager
	            android:id="@+id/pagerBanner"
	            android:layout_width="match_parent"
	            android:layout_height="150dp"/>
	        <!-- 
	        <ImageView 
	            android:layout_width="match_parent"
	            android:layout_height="150dp"
	            android:src="@drawable/tempbanner"
	            android:scaleType="fitXY"/> -->
	        <RelativeLayout 
	            android:id="@+id/rlFood"
	            android:layout_marginTop="5dp"
	            android:layout_marginLeft="5dp"
	            android:visibility="gone"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content">
	            <TextView 
	                android:layout_alignParentLeft="true"
	                android:id="@+id/tvFood"
	                android:textColor="@color/text_blue"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/food"/>
	            <TextView 
	                android:layout_alignParentRight="true"
	                android:id="@+id/tvViewmoreFood"
	                android:textColor="@color/text_blue"
	                android:layout_width="wrap_content"
	                android:layout_marginRight="5dp"
	                android:layout_height="wrap_content"
	                android:text="@string/view_more"/>
	            <com.meetme.android.horizontallistview.HorizontalListView
	                android:id="@+id/hlvFood"
	                android:layout_width="wrap_content"
	                android:layout_height="200dp"
	              	android:layout_below="@id/tvFood"
	              	android:layout_marginTop="5dp"/>
	            <View 
	                android:layout_below="@id/hlvFood"
		            android:layout_width="match_parent"
		            android:layout_height="1px"
		            android:background="@color/silver"
		            android:layout_marginTop="5dp"
		            android:layout_marginBottom="5dp"/>
	        </RelativeLayout>
	        
	        <RelativeLayout 
	            android:id="@+id/rlCoffeeScream"
	            android:visibility="gone"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp">
	            <TextView 
	                android:layout_alignParentLeft="true"
	                android:id="@+id/tvCoffeScream"
	                android:textColor="@color/text_blue"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/coffee_scream"/>
	            <TextView 
	                android:layout_alignParentRight="true"
	                android:id="@+id/tvViewmoreCoffeeScream"
	                android:textColor="@color/text_blue"
	                android:layout_marginRight="5dp"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/view_more"/>
	            <com.meetme.android.horizontallistview.HorizontalListView
		            android:id="@+id/hlvCoffeScream"
		            android:layout_below="@id/tvCoffeScream"
		            android:layout_width="wrap_content"
		            android:layout_height="200dp"
		            android:layout_marginTop="5dp"/>
	            <View 
	                android:layout_below="@id/hlvCoffeScream"
		            android:layout_width="match_parent"
		            android:layout_height="1px"
		            android:background="@color/silver"
		            android:layout_marginTop="5dp"
		            android:layout_marginBottom="5dp"/>
	        </RelativeLayout>
	        
	        <RelativeLayout
	            android:id="@+id/rlShopping"
	            android:visibility="gone" 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp">
	            
	            <TextView 
	                android:layout_alignParentLeft="true"
	                android:id="@+id/tvShopping"
	                android:textColor="@color/text_blue"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/shopping"/>
	            <TextView 
	                android:layout_alignParentRight="true"
	                android:id="@+id/tvViewmoreShopping"
	                android:layout_marginRight="5dp"
	                android:layout_width="wrap_content"
	                android:textColor="@color/text_blue"
	                android:layout_height="wrap_content"
	                android:text="@string/view_more"/>
	            <com.meetme.android.horizontallistview.HorizontalListView
		            android:id="@+id/hlvShopping"
		            android:layout_below="@id/tvShopping"
		            android:layout_width="wrap_content"
		            android:layout_height="200dp"
		            android:layout_marginTop="5dp"/>
	            <View 
	                android:layout_below="@id/hlvShopping"
		            android:layout_width="match_parent"
		            android:layout_height="1px"
		            android:background="@color/silver"
		            android:layout_marginTop="5dp"
		            android:layout_marginBottom="5dp"/>
	        </RelativeLayout>
	        
	        <RelativeLayout 
	            android:id="@+id/rlHealth"
	            android:visibility="gone"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp">
	            
	            <TextView 
	                android:layout_alignParentLeft="true"
	                android:id="@+id/tvHealth"
	                android:textColor="@color/text_blue"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/health"/>
	            <TextView 
	                android:layout_alignParentRight="true"
	                android:id="@+id/tvViewmoreHealth"
	                android:layout_marginRight="5dp"
	                android:textColor="@color/text_blue"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/view_more"/>
	            <com.meetme.android.horizontallistview.HorizontalListView
		            android:id="@+id/hlvHealth"
		            android:layout_below="@id/tvViewmoreHealth"
		            android:layout_width="wrap_content"
		            android:layout_height="200dp"
		            android:layout_marginTop="5dp"/>
	            <View 
	                android:layout_below="@id/hlvHealth"
		            android:layout_width="match_parent"
		            android:layout_height="1px"
		            android:background="@color/silver"
		            android:layout_marginTop="5dp"
		            android:layout_marginBottom="5dp"/>
	        </RelativeLayout>
	        
	        
	        <RelativeLayout 
	            android:id="@+id/rlEntertainment"
	            android:visibility="gone"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp">
	            
	            <TextView 
	                android:layout_alignParentLeft="true"
	                android:id="@+id/tvEntertainment"
	                android:textColor="@color/text_blue"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/entertainment"/>
	            <TextView 
	                android:layout_alignParentRight="true"
	                android:id="@+id/tvViewmoreEntertainment"
	                android:textColor="@color/text_blue"
	                android:layout_marginRight="5dp"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/view_more"/>
	            <com.meetme.android.horizontallistview.HorizontalListView
		            android:id="@+id/hlvEntertainment"
		            android:layout_below="@id/tvEntertainment"
		            android:layout_width="wrap_content"
		            android:layout_height="200dp"
		            android:layout_marginTop="5dp"/>
	            <View 
	                android:layout_below="@id/hlvEntertainment"
		            android:layout_width="match_parent"
		            android:layout_height="1px"
		            android:background="@color/silver"
		            android:layout_marginTop="5dp"
		            android:layout_marginBottom="5dp"/>
	        </RelativeLayout>
	        
	        <RelativeLayout 
	            android:id="@+id/rlTravel"
	            android:visibility="gone"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp">
	            
	            <TextView 
	                android:layout_alignParentLeft="true"
	                android:id="@+id/tvTravel"
	                android:textColor="@color/text_blue"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/travel"/>
	            <TextView 
	                android:layout_alignParentRight="true"
	                android:id="@+id/tvViewmoreTravel"
	                android:layout_marginRight="5dp"
	                android:textColor="@color/text_blue"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/view_more"/>
	            <com.meetme.android.horizontallistview.HorizontalListView
		            android:id="@+id/hlvTravel"
		            android:layout_below="@id/tvTravel"
		            android:layout_width="wrap_content"
		            android:layout_height="200dp"
		            android:layout_marginTop="5dp"/>
	            <View 
	                android:layout_below="@id/hlvTravel"
		            android:layout_width="match_parent"
		            android:layout_height="1px"
		            android:background="@color/silver"
		            android:layout_marginTop="5dp"
		            android:layout_marginBottom="5dp"/>
	        </RelativeLayout>
	    </LinearLayout>
	</ScrollView>    
	<LinearLayout 
	    android:layout_alignParentBottom="true"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:background="@color/background_footer"
	    android:weightSum="3">
	    <LinearLayout 
	        android:id="@+id/llPromotionPlace"
	        android:layout_width="0dp"
	        android:background="@drawable/background_linear_layout"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:gravity="center"
	        android:layout_weight="1">
	        <ImageView 
	            android:layout_marginTop="3dp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/like48"/>
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/promotion_place"
	            android:layout_marginBottom="3dp"/>
	    </LinearLayout>
	    <LinearLayout 
	        android:id="@+id/llTakeOrder"
	        android:layout_width="0dp"
	        android:background="@drawable/background_linear_layout"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:gravity="center"
	        android:layout_weight="1">
	        <ImageView 
	            android:layout_marginTop="3dp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/camera48"/>
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/send_order"
	            android:layout_marginBottom="3dp"/>
	    </LinearLayout>
	    <LinearLayout 
	        android:id="@+id/llMarkCharge"
	        android:layout_width="0dp"
	        android:background="@drawable/background_linear_layout"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:gravity="center"
	        android:layout_weight="1">
	        <ImageView 
	            android:layout_marginTop="3dp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/star48"/>
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/mark_charge"
	            android:layout_marginBottom="3dp"/>
	    </LinearLayout>
	</LinearLayout>
</RelativeLayout>
