<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >
   <FrameLayout 
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <fragment 
	        android:id="@+id/fragmentCamera"
	        android:name="android.tgudapp.ui.fragment.CameraFragment"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_gravity="center"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="390dp"
            android:gravity="bottom|center"
            android:text="Bạn vui lòng chụp hóa đơn vừa nhận được để tích điểm (1000đ = 1 điểm) và có cơ hội rút thăm trúng 1 chiếc iphone 5s."
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </FrameLayout>
    
	<LinearLayout 
	    android:layout_alignParentBottom="true"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:background="@color/silver"
	    android:weightSum="3">
	    <LinearLayout 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:background="@drawable/background_linear_layout"
	        android:orientation="vertical"
	        android:onClick="backPress"
	        android:gravity="center"
	        android:layout_weight="1">
	        <ImageView 
	            android:layout_marginTop="3dp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/back48"/>
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/back"
	            android:layout_marginBottom="3dp"/>
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="0dp"
	        android:background="@drawable/background_linear_layout"
	        android:layout_height="wrap_content"
	        android:onClick="takePicture"
	        android:orientation="vertical"
	        android:gravity="center"
	        android:layout_weight="1">
	        <ImageView 
	            android:layout_marginTop="3dp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/camera48"/>
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/take_picture"
	            android:layout_marginBottom="3dp"/>
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="0dp"
	        android:background="@drawable/background_linear_layout"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:onClick="sendOrder"
	        android:gravity="center"
	        android:layout_weight="1">
	        <ImageView 
	            android:layout_marginTop="3dp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/upload48"/>
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/send_order"
	            android:layout_marginBottom="3dp"/>
	    </LinearLayout>
	</LinearLayout>
</RelativeLayout>
